# pickleback

./: Cargo.toml  LICENSE  README.md
examples/: client.rs  server.rs
src/: ack_header.rs  buffer_pool.rs  channel.rs  client.rs  config.rs  cursor.rs  dispatcher.rs  endpoint.rs  error.rs  jitter_pipe.rs  lib.rs  message.rs  message_reassembler.rs  packet.rs  pickleback.rs  protocol.rs  received_message.rs  sequence_buffer.rs  server.rs  test_utils.rs  tracking.rs
src/protocol/: ack_header.rs  client.rs  message.rs  mod.rs  packets.rs  server.rs
src/reliable/: README.md  error.rs  headers.rs  mod.rs  plugin.rs  sequence_buffer.rs
tests/: protocol.rs  soak.rs
