[package]
name = "packeteer"
authors = ["RJ <rj@metabrew.com>"]
version = "0.1.0"
edition = "2021"
description = "A transport layer atop unreliable datagram exchange"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
lifeguard = "0.6.1"
byteorder = "1.5.0"
smallmap = "1.4.2"
enum_dispatch = "0.3.12"
assert_float_eq = "1.1.3"

